push pagi(undone)